# axon

./: .gitignore  CHANGELOG.md  README.md  phase5-measurement.md  phase7-measurement.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
claude-plugin/: .mcp.json
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/skills/axon-guide/: SKILL.md
src/axon/: __init__.py  runtime.py
src/axon/cli/: main.py
src/axon/core/: drift.py  host_meta.py  meta.py  python_lang_constants.py  repos.py
src/axon/core/embeddings/: embedder.py
src/axon/core/graph/: model.py
src/axon/core/ingestion/: calls.py  coupling.py  dead_code.py  heritage.py  imports.py  members.py  parser_phase.py  pipeline.py  processes.py  reindex.py  resolved.py  test_classifier.py  types.py  walker.py  watcher.py  watcher_flush.py
src/axon/core/parsers/: base.py  python_lang.py  typescript.py
src/axon/core/storage/: base.py  kuzu_backend.py
src/axon/mcp/: freshness.py  repo_context.py  repo_routing.py  server.py  tools.py
src/axon/web/: app.py  dependencies.py  rate_limit.py
src/axon/web/frontend/: tsconfig.tsbuildinfo
src/axon/web/frontend/src/: App.tsx
src/axon/web/frontend/src/components/analysis/: AnalysisView.tsx
src/axon/web/frontend/src/hooks/: useGraph.ts
src/axon/web/frontend/src/lib/: graphAdapter.ts
src/axon/web/routes/: analysis.py  cypher.py  files.py  graph.py  processes.py  search.py
tests/cli/: test_main.py  test_schema_error_exit.py  test_watch_flag.py
tests/core/: conftest.py  test_calls.py  test_dead_code.py  test_drift.py  test_embedder.py  test_embedding_migration.py  test_extra_props.py  test_graph_model.py  test_imports.py  test_kuzu_backend.py  test_kuzu_search.py  test_members_ingestion.py  test_meta_module.py  test_parser_python_bindings.py  test_parser_python_enums.py  test_parser_python_members.py  test_parser_python_scopes.py  test_parser_typescript_scopes.py  test_pipeline.py  test_processes.py  test_reindex.py  test_reindex_members.py  test_repos.py  test_resolve_edge_extras.py  test_storage_accessors.py  test_storage_base.py  test_storage_metadata_getters.py  test_storage_schema_v3.py  test_storage_schema_v4.py  test_test_classifier.py  test_walker.py  test_watcher.py  test_watcher_flush.py  test_watcher_staleness.py
tests/mcp/: conftest.py  test_descriptions.py  test_freshness.py  test_hunk_analysis.py  test_list_repos_upgrade.py  test_multi_repo.py  test_server_phase4b.py  test_server_state.py  test_tools.py  test_tools_enum.py  test_tools_member.py  test_tools_phase6.py
tests/web/: test_rate_limit.py  test_routes.py  test_storage_dependency.py
(+17 files in other folders)
