[project]
name = "axoniq"
version = "0.2.4"
description = "Graph-powered code intelligence engine — indexes codebases into a knowledge graph, exposed via MCP tools for AI agents and a CLI for developers."
readme = "README.md"
license = "MIT"
authors = [
    { name = "harshkedia177", email = "harshkedia717@gmail.com" }
]
keywords = ["code-intelligence", "knowledge-graph", "mcp", "tree-sitter", "static-analysis", "dead-code", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "kuzu>=0.11.0",
    "igraph>=1.0.0",
    "leidenalg>=0.11.0",
    "fastembed>=0.7.0",
    "mcp>=1.0.0",
    "watchfiles>=1.0.0",
    "pathspec>=1.0.4",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/harshkedia177/axon"
Repository = "https://github.com/harshkedia177/axon"
Issues = "https://github.com/harshkedia177/axon/issues"

[project.optional-dependencies]
neo4j = ["neo4j>=5.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
axon = "axon.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/axon"]
artifacts = [
    "src/axon/web/frontend/dist/**",
]

[tool.hatch.build.targets.wheel]
exclude = [
    "src/axon/web/frontend/node_modules",
    "src/axon/web/frontend/src",
    "src/axon/web/frontend/package.json",
    "src/axon/web/frontend/package-lock.json",
    "src/axon/web/frontend/tsconfig*.json",
    "src/axon/web/frontend/vite.config.ts",
    "src/axon/web/frontend/index.html",
    "src/axon/web/frontend/.gitignore",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "allow_update_notice: run CLI tests with the real update notifier enabled",
]
